--- a/apikey/view-api-keys.html
+++ b/apikey/view-api-keys.html
@@ -22,9 +22,7 @@
 
         <!-- ปุ่ม Logout -->
         <div style="text-align: center; margin-bottom: 30px;">
-            <a href="../login-singup/login.html">
-                <button>Logout</button>
-            </a>
+            <button onclick="logout()">Logout</button>
         </div>
         
         <!-- รายการ API Keys -->
@@ -36,3 +34,4 @@
     <script src="view-api-keys.js"></script>
 </body>
 </html>
+
