--- a/reset-password/gmail.html
+++ b/reset-password/gmail.html
@@ -26,7 +26,7 @@
       const errorMessage = document.getElementById("errorMessage");
 
       try {
-        const res = await fetch('http://localhost:5000/reset-request', {
+        const res = await fetch('https://project-api-objectxify.onrender.com/reset-request', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email })
