--- a/reset-password/otp.html
+++ b/reset-password/otp.html
@@ -38,7 +38,7 @@
       const errorMessage = document.getElementById("errorMessage");
 
       try {
-        const res = await fetch('http://localhost:5000/verify-otp', {
+        const res = await fetch('https://project-api-objectxify.onrender.com/verify-otp', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email, otp })
